PA_Education/TestMenifest/force-app/main/default/objects/JobPosition__c/JobPosition__c.object-meta.xml
<CustomObject>
    <description>채용공고, 인재채용 Object</description>
    <label>인재채용</label>
    <nameField>
        <displayFormat>인재채용-{0000}</displayFormat>
        <label>인재채용 Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>