PA_Education/TestMenifest/force-app/main/default/objects/JobPosition__c/fields/Career__c.field-meta.xml
<CustomField>
    <fullName>Career__c</fullName>
    <label>지원구분</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>신입</fullName>
            </value>
            <value>
                <fullName>경력</fullName>
            </value>
            <value>
                <fullName>무관</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>