PA_Education/TestMenifest/force-app/main/default/objects/JobPosition__c/fields/CareerEng__c.field-meta.xml
<CustomField>
    <fullName>CareerEng__c</fullName>
    <label>지원구분 (English)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Experienced</fullName>
            </value>
            <value>
                <fullName>New</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>