PA_Education/TestMenifest/force-app/main/default/objects/JobPosition__c/fields/Education__c.field-meta.xml
<CustomField>
    <fullName>Education__c</fullName>
    <label>학력</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>학력무관</fullName>
            </value>
            <value>
                <fullName>고졸</fullName>
            </value>
            <value>
                <fullName>대졸(2~3년제) 이상</fullName>
            </value>
            <value>
                <fullName>대졸(4년제) 이상</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>