PA_Education/TestMenifest/force-app/main/default/objects/JobPosition__c/fields/EducationEng__c.field-meta.xml
<CustomField>
    <fullName>EducationEng__c</fullName>
    <label>학력 (English)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Academic Background Required</fullName>
            </value>
            <value>
                <fullName>Graduated High School</fullName>
            </value>
            <value>
                <fullName>Associate Degree</fullName>
            </value>
            <value>
                <fullName>Bachelor’s Degree</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>