PA_Education/TestMenifest/force-app/main/default/objects/JobPosition__c/fields/fm_subject__c.field-meta.xml
<CustomField>
    <fullName>fm_subject__c</fullName>
    <formula>Year__c  + &apos;년 &apos; + TEXT(RecruitmentCategory__c) + &apos; &apos; + TEXT(Position__c) + &apos; &apos; + TEXT(Career__c) + &apos; 모집&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>채용 명</label>
    <type>Text</type>
</CustomField>