PA_Education/TestMenifest/force-app/main/default/objects/JobPosition__c/fields/fm_subjectEng__c.field-meta.xml
<CustomField>
    <fullName>fm_subjectEng__c</fullName>
    <formula>Year__c + &apos; &apos; + TEXT(RecruitmentCategoryEng__c) + &apos; for &apos; + if(TEXT(CareerEng__c)==&apos;NEW&apos;, &apos;Beginner&apos;, &apos;Experienced&apos;) + &apos; &apos; + TEXT(Position__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>채용 명 (English)</label>
    <type>Text</type>
</CustomField>