PA_Education/TestMenifest/force-app/main/default/objects/JobPosition__c/fields/MainBusiness__c.field-meta.xml
<CustomField>
    <fullName>MainBusiness__c</fullName>
    <description>인재채용 대상의 주요업무 기재</description>
    <label>주요업무</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>