PA_Education/TestMenifest/force-app/main/default/objects/JobPosition__c/fields/MainBusinessEng__c.field-meta.xml
<CustomField>
    <fullName>MainBusinessEng__c</fullName>
    <label>주요업무 (English)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>