PA_Education/TestMenifest/force-app/main/default/objects/JobPosition__c/fields/OrderNum__c.field-meta.xml
<CustomField>
    <fullName>OrderNum__c</fullName>
    <label>OrderNum</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>