PA_Education/TestMenifest/force-app/main/default/objects/JobPosition__c/fields/preferentialTreatment__c.field-meta.xml
<CustomField>
    <fullName>preferentialTreatment__c</fullName>
    <label>우대사항</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>