PA_Education/TestMenifest/force-app/main/default/objects/JobPosition__c/fields/preferentialTreatmentEng__c.field-meta.xml
<CustomField>
    <fullName>preferentialTreatmentEng__c</fullName>
    <label>우대사항 (English)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>