PA_Education/TestMenifest/force-app/main/default/objects/JobPosition__c/fields/Qualifications__c.field-meta.xml
<CustomField>
    <fullName>Qualifications__c</fullName>
    <label>자격요건</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>