PA_Education/TestMenifest/force-app/main/default/objects/JobPosition__c/fields/QualificationsEng__c.field-meta.xml
<CustomField>
    <fullName>QualificationsEng__c</fullName>
    <label>자격요건 (English)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>