PA_Education/TestMenifest/force-app/main/default/objects/JobPosition__c/fields/RecruitmentCategory__c.field-meta.xml
<CustomField>
    <fullName>RecruitmentCategory__c</fullName>
    <label>모집 구분</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>공개채용</fullName>
            </value>
            <value>
                <fullName>특별채용</fullName>
            </value>
            <value>
                <fullName>상시채용</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>