PA_Education/TestMenifest/force-app/main/default/objects/JobPosition__c/fields/RecruitmentCategoryEng__c.field-meta.xml
<CustomField>
    <fullName>RecruitmentCategoryEng__c</fullName>
    <label>모집 구분(English)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open Recruitment</fullName>
            </value>
            <value>
                <fullName>Special Recruitment</fullName>
            </value>
            <value>
                <fullName>Normal Recruitment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>