PA_Education/TestMenifest/force-app/main/default/objects/JobPosition__c/fields/StatusEng__c.field-meta.xml
<CustomField>
    <fullName>StatusEng__c</fullName>
    <label>Status (English)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>