PA_Education/TestMenifest/force-app/main/default/objects/JobPosition__c/fields/WorkingPlace__c.field-meta.xml
<CustomField>
    <fullName>WorkingPlace__c</fullName>
    <label>근무지역</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>서울</fullName>
            </value>
            <value>
                <fullName>경기</fullName>
            </value>
            <value>
                <fullName>인천</fullName>
            </value>
            <value>
                <fullName>수원</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>