PA_Education/TestMenifest/force-app/main/default/objects/JobPosition__c/fields/WorkingPlaceEng__c.field-meta.xml
<CustomField>
    <fullName>WorkingPlaceEng__c</fullName>
    <label>근무지역 (English)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Seoul</fullName>
            </value>
            <value>
                <fullName>Gyeonggi</fullName>
            </value>
            <value>
                <fullName>Incheon</fullName>
            </value>
            <value>
                <fullName>Suwon</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>