PA_Education/TestMenifest/force-app/main/default/objects/JobPosition__c/fields/WorkType__c.field-meta.xml
<CustomField>
    <fullName>WorkType__c</fullName>
    <label>근무형태</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>정규직</fullName>
            </value>
            <value>
                <fullName>계약직</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>