PA_Education/TestMenifest/force-app/main/default/objects/JobPosition__c/fields/WorkTypeEng__c.field-meta.xml
<CustomField>
    <fullName>WorkTypeEng__c</fullName>
    <inlineHelpText>계약직 = Full-time Contract</inlineHelpText>
    <label>근무형태 (English)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Permanent</fullName>
            </value>
            <value>
                <fullName>Full-time Contract</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>