PA_Education/TestMenifest/force-app/main/default/objects/JobPosition__c/fields/Year__c.field-meta.xml
<CustomField>
    <fullName>Year__c</fullName>
    <description>인재채용 제목 용도의 Field
ex) 2021 2022</description>
    <label>년도</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>