PA_Education/TestMenifest/force-app/main/default/objects/JobPosition__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>fm_subject__c</columns>
    <columns>Year__c</columns>
    <columns>RecruitmentCategory__c</columns>
    <columns>WorkType__c</columns>
    <columns>Career__c</columns>
    <columns>Position__c</columns>
    <columns>Status__c</columns>
    <columns>OrderNum__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>